--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note App - ChatGPT Style</title>
+    <title>Note</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -119,6 +119,22 @@
             color: #fff;
             border: none;
             cursor: pointer;
+        }
+        @media (max-width: 600px) {
+            .container {
+                height: 100vh;
+            }
+            .sidebar {
+                width: 100%;
+                padding: 10px;
+            }
+            .main-content {
+                width: 100%;
+                padding: 10px;
+            }
+            .note-editor textarea {
+                height: 40vh;
+            }
         }
     </style>
 </head>
